added new projects links

--- a/index.html
+++ b/index.html
@@ -102,6 +102,46 @@
         </div>
 
 
+
+        <div class="col mb-3 mt-3">
+          <div class="card text-center" style="width: 18rem">
+            <img src="./images/footer.JPG" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Footer</h5>
+              <p class="card-text">
+                Portfolio using Html , Css and Bootstrap.A complete responsive
+                page.
+              </p>
+              <a
+                href=" https://shimmering-centaur-b97ac5.netlify.app "
+                class="btn btn-primary"
+                >View</a
+              >
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col mb-3 mt-3">
+          <div class="card text-center" style="width: 18rem">
+            <img src="./images/spotify-login.JPG" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Spotify-Login</h5>
+              <p class="card-text">
+                Portfolio using Html , Css and Bootstrap.A complete responsive
+                page.
+              </p>
+              <a
+                href=" https://shimmering-centaur-b97ac5.netlify.app "
+                class="btn btn-primary"
+                >View</a
+              >
+            </div>
+          </div>
+        </div>
+
+
+
       </div>
     </div>
 
